package pl.edu.agh.mwo.multipleks;

public enum TicketType {
    STANDARD,
    REDUCED,
    FAMILY
}
